# scaler_school

./: Dockerfile  README.md  inference.py  openenv.yaml  requirements.txt  validate.sh
code_debug_env/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
code_debug_env/server/: app.py  environment.py  requirements.txt  tasks.py
